force-app/main/default/objects/Country_Picklist_Values__mdt/Country_Picklist_Values__mdt.object-meta.xml
<CustomObject>
    <label>Country Picklist Values</label>
    <pluralLabel>Country Picklist Values</pluralLabel>
</CustomObject>