force-app/main/default/objects/Country_Picklist_Values__mdt/fields/Affiliate_Country__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SW will pay per lead/contact only for affiliates that bring leads/contacts from countries that checked as &apos;Affiliate Country&apos;</description>
    <label>Affiliate Country</label>
    <type>Checkbox</type>
</CustomField>