force-app/main/default/objects/Country_Picklist_Values__mdt/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>CountryName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>