force-app/main/default/objects/Country_Picklist_Values__mdt/fields/ISO_Code_3__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code_3__c</fullName>
    <label>ISO Code 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>